fix button card spacing on Home page

--- a/front-end/src/pages/Pages.css
+++ b/front-end/src/pages/Pages.css
@@ -6,16 +6,31 @@ h3 {
     color: darkblue
 }
 
-.homepage-card {
-    transition: all 0.3s;
-    width: 600px !important;
-    height: 185px !important;
-    cursor: pointer;
-    background-color: rgb(29 161 242) !important;
+.button-card-container {
+    display: flex;
+    border: solid yellow 2px;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
 }
 
-.homepage-card:hover {
-    transform: scale(1.02);
+.button-card {
+    transition: all 0.3s;
+    cursor: pointer;
+    background-color: rgb(29 161 242) !important;
+    display: flex;
+    color: white !important;
+    height: 185px !important;
+}
+
+.button-card:hover {
+    transform: scale(1.04);
+}
+
+
+.button-card-body {
+    display: flex;
+    justify-content: center;
 }
 
 .search-content-container, .random-content-container {
@@ -25,22 +40,17 @@ h3 {
 
 .card {
     width: 600px;
-    margin: 100px;
-}
-
-.button-card {
-    display: flex;
-    color: white !important;
-    background-color: rgb(29 161 242);
-    border-color: rgb(29 161 242);
+    margin: 20px;
 }
 
 .card-image-container {
-    padding-right: 20px;
+    width: 180px;
+    border: green solid 2px;
 }
 
 .card-text-container {
     width: 400px;
+    border: red solid 2px;
 }
 
 .card-image {
